--- a/frontend/html/auth/login.html
+++ b/frontend/html/auth/login.html
@@ -27,8 +27,8 @@
             <form action="#">
                 <h1>Sign in</h1>
                 <span>Use your account</span>
-                <input type="text" id="username" placeholder="Username" required/>
-                <input type="password" id="password" placeholder="Password" required/>
+                <input type="text"  id="sign-in-username" placeholder="Username" required/>
+                <input type="password" id="sign-in-password" placeholder="Password" required/>
                 <button type="submit" onclick="onSubmit()">Sign In</button>
             </form>
         </div>
