necessary changes for login page

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footoshop</title>
-    <link rel="stylesheet" href="../../css/login.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 
 <body>
@@ -16,10 +16,10 @@
                 <input type="text"  id="username" placeholder="Username" required/>
                 <input type="email" id="email" placeholder="Email" required/>
                 <input type="password" id="password" placeholder="Password" required/>
-                <input type="firstname" id="firstName" placeholder="First Name" required/>
-                <input type="lastname" id="lastName" placeholder="Last Name" required/>
-                <input type="address" id="address" placeholder="Address(optionnal)" />
-                <input type="phone" id="phone" placeholder="Phone Number(optionnal)" />
+                <input type="text" id="first_name" placeholder="First Name" required/>
+                <input type="text" id="last_name" placeholder="Last Name" required/>
+                <input type="text" id="address" placeholder="Address(optionnal)" />
+                <input type="tel" id="mobile_number" placeholder="Phone Number(optionnal)" />
                 <button type="submit" onclick="register()">Sign Up</button>
             </form>
         </div>
@@ -47,6 +47,6 @@
             </div>
         </div>
     </div>
-    <script src="../../js/login.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
