adding single and all products pages and updating existing functionnalities

--- a/frontend/html/wishlist.html
+++ b/frontend/html/wishlist.html
@@ -25,9 +25,9 @@
             <a href="main.html" class="nav_logo">FOOTOSHOP</a>
             <ul class="nav_list">
                 <li class="nav_item"><a href="main.html" class="nav_link">Home</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Men</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Women</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Kids</a></li>
+                <li class="nav_item"><a href="allproducts.html?CategoryId=1" class="nav_link">Men</a></li>
+                <li class="nav_item"><a href="allproducts.html?CategoryId=2" class="nav_link">Women</a></li>
+                <li class="nav_item"><a href="allproducts.html?CategoryId=3" class="nav_link">Kids</a></li>
                 <li class="nav_item"><a href="#" class="header_filter_limited">Limited Offers</a></li>
                 <!-- <li class="nav_item dropdown"> -->
                     <!-- <a href="#" class="nav_link">Categories <i class="fas fa-chevron-down"></i></a>
@@ -80,10 +80,7 @@
                     <p class="wishlist_header_title">Product image</p>
                     <p class="wishlist_header_title">Price</p>
                 </div>
-                <div class="wishlist_item">
-                        <span class="wishlist_item_title">Air Jordan</span>
-                        <img src="img/products/product-1.png" alt="" class="wishlist_img">
-                        <div class="wishlist_item_price">120$</div>
+                <div class="wishlist-items-container"></div>
                 </div>
                 
             </div>
@@ -137,6 +134,7 @@
     </footer>
     <script src="../js/main.js"></script>
     <script src="../js/wishlist.js"></script>
+    <script src="../js/cart.js"></script>
 
 </body>
 </html>
