--- a/frontend/html/singleproduct.html
+++ b/frontend/html/singleproduct.html
@@ -16,7 +16,7 @@
                 <p class="top_nav_p">
                     LIMITED TIME OFFERS !
                 </p>
-                <a href="#" class="top_nav_link">SHOP NOW</a>
+                <a href="allproducts.html" class="top_nav_link">SHOP NOW</a>
             </div>
         </div>
     </div>
@@ -65,7 +65,7 @@
                         </a>
                     </div>
                     <div class="profile">
-                        <a href="login.html">
+                        <a href="#" id="profile-link">
                             <i class="fas fa-user"></i>
                         </a>
                     </div>
@@ -160,6 +160,8 @@
     </footer>
     <script src="../js/wishlist.js"></script>
     <script src="../js/singleproduct.js"></script>
+    <script src="../js/websockets-manager.js"></script>
+    <script src="../js/main.js"></script>
     <script src="../js/cart.js"></script>
     
 </body>
