--- a/frontend/html/allproducts.html
+++ b/frontend/html/allproducts.html
@@ -16,7 +16,7 @@
                 <p class="top_nav_p">
                     LIMITED TIME OFFERS !
                 </p>
-                <a href="#" class="top_nav_link">SHOP NOW</a>
+                <a href="allproducts.html" class="top_nav_link">SHOP NOW</a>
             </div>
         </div>
     </div>
@@ -43,7 +43,7 @@
                     </a>
                 </div>
                 <div class="profile">
-                    <a href="login.html">
+                    <a href="#" id="profile-link">
                         <i class="fas fa-user"></i>
                     </a>
                 </div>
@@ -140,6 +140,7 @@
     <script src="../js/utils.js"></script>
     <script src="../js/allproducts.js"></script>
     <script src="../js/cart.js"></script>
+    <script src="../js/websockets-manager.js"></script>
     <script src="../js/wishlist.js"></script>
     <script src="../js/main.js"></script>
     
