--- a/frontend/html/main.html
+++ b/frontend/html/main.html
@@ -16,7 +16,7 @@
                 <p class="top_nav_p">
                     LIMITED TIME OFFERS !
                 </p>
-                <a href="#" class="top_nav_link">SHOP NOW</a>
+                <a href="allproducts.html" class="top_nav_link">SHOP NOW</a>
             </div>
         </div>
     </div>
@@ -60,7 +60,7 @@
                         </a>
                     </div>
                     <div class="profile">
-                        <a href="login.html">
+                        <a href="#" id="profile-link">
                             <i class="fas fa-user"></i>
                         </a>
                     </div>
@@ -228,6 +228,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="../js/websockets-manager.js"></script>
     <script src="../js/cart.js"></script>
     <script src="../js/utils.js"></script>
     <script src="../js/main.js"></script>
