adding logout functionnality

--- a/frontend/html/main.html
+++ b/frontend/html/main.html
@@ -78,9 +78,9 @@
                 <a href="allproducts.html?CategoryId=1" class="header_filter_link">Men</a>
                 <a href="allproducts.html?CategoryId=2" class="header_filter_link">Women</a>
                 <a href="allproducts.html?CategoryId=3" class="header_filter_link">Kids</a>
-                <a href="#" class="header_filter_limited">Limited Offers</a>
+                <!-- <a href="#" class="header_filter_limited">Limited Offers</a>
                 <a href="#" class="header_filter_link">Contact Us</a>
-                <a href="#" class="header_filter_link">About</a>
+                <a href="#" class="header_filter_link">About</a> -->
             </div>
             <img src="../assets/headers_img/headeropt.png" alt="" class="header_img">
         </div>
@@ -167,17 +167,17 @@
             <div class="service">
                 <i class="fas fa-headset"></i>
                 <h3 class="service_title">24/7 Support</h3>
-                <p class="service_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium doloremque, sed velit cumque, tempore rerum consequuntur fugit, ipsum rem expedita esse magnam quaerat explicabo asperiores ut enim reiciendis nobis delectus.</p>
+                <p class="service_p">We are with you 24/7</p>
             </div>
             <div class="service">
                 <i class="fa-sharp fa-solid fa-truck"></i>
                 <h3 class="service_title">Free Shipping</h3>
-                <p class="service_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium doloremque, sed velit cumque, tempore rerum consequuntur fugit, ipsum rem expedita esse magnam quaerat explicabo asperiores ut enim reiciendis nobis delectus.</p>
+                <p class="service_p">Benefit of our best shipping policy</p>
             </div>
             <div class="service">
                 <i class="fas fa-tags"></i>
                 <h3 class="service_title">Best Price</h3>
-                <p class="service_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium doloremque, sed velit cumque, tempore rerum consequuntur fugit, ipsum rem expedita esse magnam quaerat explicabo asperiores ut enim reiciendis nobis delectus.</p>
+                <p class="service_p">the best prices on the internet and localhost right now</p>
             </div>
         </div>
     </section>
@@ -186,7 +186,7 @@
             <div class="footer_item">
                 <a href="#" class="footer_logo">Footoshop</a>
                 <div class="footer_p">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta in, nesciunt obcaecati odio nulla sapiente cum quis voluptate officiis reiciendis accusantium magni fuga laboriosam aut quas vero mollitia iste expedita!
+                    Official website created by 3rd Year student in Polytech Montpellier, France to buy and sell shoes online.
                     <div class="footer_bottom_icons">
                         <a href="#" class="footer_bottom_icon"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="footer_bottom_icon"><i class="fab fa-instagram"></i></a>
