--- a/frontend/html/usersAdmin.html
+++ b/frontend/html/usersAdmin.html
@@ -38,7 +38,7 @@
             </div>
             <div class="profile-dropdown">
               <div class="dropdown-divider"></div>
-              <a href="#"
+              <a href="login.html"
                 ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
               >
             </div>
