--- a/frontend/html/wishlist.html
+++ b/frontend/html/wishlist.html
@@ -28,7 +28,7 @@
                 <li class="nav_item"><a href="allproducts.html?CategoryId=1" class="nav_link">Men</a></li>
                 <li class="nav_item"><a href="allproducts.html?CategoryId=2" class="nav_link">Women</a></li>
                 <li class="nav_item"><a href="allproducts.html?CategoryId=3" class="nav_link">Kids</a></li>
-                <li class="nav_item"><a href="#" class="header_filter_limited">Limited Offers</a></li>
+                <!-- <li class="nav_item"><a href="#" class="header_filter_limited">Limited Offers</a></li> -->
                 <!-- <li class="nav_item dropdown"> -->
                     <!-- <a href="#" class="nav_link">Categories <i class="fas fa-chevron-down"></i></a>
                     <ul class="dropdown-menu">
