--- a/frontend/html/productsAdmin.html
+++ b/frontend/html/productsAdmin.html
@@ -43,7 +43,7 @@
                 <span class="badge">3</span></a
               > -->
               <div class="dropdown-divider"></div>
-              <a href="#"
+              <a href="login.html"
                 ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
               >
             </div>
