adding logout functionnality

--- a/frontend/html/main.html
+++ b/frontend/html/main.html
@@ -63,6 +63,11 @@
                         <a href="#" id="profile-link">
                             <i class="fas fa-user"></i>
                         </a>
+                        <div class="profile-dropdown">
+                            <a href="#" id="profile-option"><i class="fas fa-user-circle"></i> Profile</a>
+                            <div class="dropdown-divider"></div>
+                            <a href="login.html" id="logout-link"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+                        </div>
                     </div>
                     
                 </a>
