--- a/frontend/html/allproducts.html
+++ b/frontend/html/allproducts.html
@@ -43,10 +43,15 @@
                     </a>
                 </div>
                 <div class="profile">
-                    <a href="#" id="profile-link">
-                        <i class="fas fa-user"></i>
-                    </a>
-                </div>
+                        <a href="#" id="profile-link">
+                            <i class="fas fa-user"></i>
+                        </a>
+                        <div class="profile-dropdown">
+                            <a href="#" id="profile-option"><i class="fas fa-user-circle"></i> Profile</a>
+                            <div class="dropdown-divider"></div>
+                            <a href="login.html" id="logout-link"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+                        </div>
+                    </div>
             </div>
         </div>
     </nav>
