--- a/frontend/html/singleproduct.html
+++ b/frontend/html/singleproduct.html
@@ -25,10 +25,10 @@
             <a href="main.html" class="nav_logo">FOOTOSHOP</a>
             <ul class="nav_list">
                 <li class="nav_item"><a href="main.html" class="nav_link">Home</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Men</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Women</a></li>
-                <li class="nav_item"><a href="#" class="nav_link">Kids</a></li>
-                <li class="nav_item"><a href="#" class="header_filter_limited">Limited Offers</a></li>
+                <li class="nav_item"><a href="allproducts.html?CategoryId=1" class="nav_link">Men</a></li>
+                <li class="nav_item"><a href="allproducts.html?CategoryId=2" class="nav_link">Women</a></li>
+                <li class="nav_item"><a href="allproducts.html?CategoryId=3" class="nav_link">Kids</a></li>
+                <!-- <li class="nav_item"><a href="#" class="header_filter_limited">Limited Offers</a></li> -->
                 <form action="#" class="nav_form_product_page">
                     <input type="text" class="nav_input_product_page" placeholder="What are you looking for?">
                     <i class="fas fa-search"></i>
