--- a/frontend/html/cart.html
+++ b/frontend/html/cart.html
@@ -103,7 +103,7 @@
             <div class="footer_item">
                 <a href="#" class="footer_logo">Footoshop</a>
                 <div class="footer_p">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta in, nesciunt obcaecati odio nulla sapiente cum quis voluptate officiis reiciendis accusantium magni fuga laboriosam aut quas vero mollitia iste expedita!
+                    Official website created by 3rd Year student in Polytech Montpellier, France to buy and sell shoes online. 
                     <div class="footer_bottom_icons">
                         <a href="#" class="footer_bottom_icon"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="footer_bottom_icon"><i class="fab fa-instagram"></i></a>
