--- a/frontend/html/wishlist.html
+++ b/frontend/html/wishlist.html
@@ -85,9 +85,7 @@
                     <p class="wishlist_header_title">Product image</p>
                     <p class="wishlist_header_title">Price</p>
                 </div>
-                <div class="wishlist-items-container"></div>
-                </div>
-                
+                <div class="wishlist-items-container" style="min-height: 300px;"></div>
             </div>
         </div>
     </section>
@@ -96,7 +94,7 @@
             <div class="footer_item">
                 <a href="#" class="footer_logo">Footoshop</a>
                 <div class="footer_p">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta in, nesciunt obcaecati odio nulla sapiente cum quis voluptate officiis reiciendis accusantium magni fuga laboriosam aut quas vero mollitia iste expedita!
+                    Official website created by 3rd Year student in Polytech Montpellier, France to buy and sell shoes online. 
                     <div class="footer_bottom_icons">
                         <a href="#" class="footer_bottom_icon"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="footer_bottom_icon"><i class="fab fa-instagram"></i></a>
@@ -138,9 +136,9 @@
         </div>
     </footer>
     <script src="../js/main.js"></script>
-    <script src="../js/wishlist.js"></script>
     <script src="../js/websockets-manager.js"></script>
     <script src="../js/cart.js"></script>
+    <script src="../js/wishlist.js"></script>
 
 </body>
 </html>
