--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </div>
+    <script src="../js/config.js"></script>
     <script src="../js/websockets-manager.js"></script>
     <script src="../js/login.js"></script>
 </body>
