--- a/frontend/html/main.html
+++ b/frontend/html/main.html
@@ -233,6 +233,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="../js/config.js"></script>
     <script src="../js/websockets-manager.js"></script>
     <script src="../js/cart.js"></script>
     <script src="../js/utils.js"></script>
