Removing unecessary files

--- a/backend/frontend/html/productsAdmin.html
+++ b/backend/frontend/html/productsAdmin.html
@@ -125,12 +125,13 @@
     <h1>All Products</h1>
     <div id="product-list" class="product-list"></div> <!-- This is where the products will be displayed -->
   </div>
+  <script src="../js/config.js"></script>
+  <script src="../js/utils.js"></script>
   <script src="../js/admin.js" defer></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       fetchAllProducts(); // Only run if the table exists
     });
   </script>
-  <script src="../js/utils.js"></script>
 </body>
 </html>
