--- a/frontend/html/allproducts.html
+++ b/frontend/html/allproducts.html
@@ -144,6 +144,7 @@
 
     <script src="../js/utils.js"></script>
     <script src="../js/allproducts.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/cart.js"></script>
     <script src="../js/websockets-manager.js"></script>
     <script src="../js/wishlist.js"></script>
