--- a/frontend/html/usersAdmin.html
+++ b/frontend/html/usersAdmin.html
@@ -113,5 +113,6 @@
     </div>
     <script src="../js/admin.js" defer></script>
     <script src="../js/websockets-manager.js"></script>
+    <script src="../js/utils.js"></script>
   </body>
 </html>
