--- a/backend/frontend/html/admin.html
+++ b/backend/frontend/html/admin.html
@@ -226,9 +226,10 @@
       </main>
     </div>
 
+    <script src="../js/config.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/websockets-manager.js"></script>
     <script src="../js/admin.js"></script>
-    <script src="../js/utils.js"></script>
     
   </body>
 </html>
