--- a/backend/frontend/html/wishlist.html
+++ b/backend/frontend/html/wishlist.html
@@ -135,11 +135,12 @@
             
         </div>
     </footer>
-    <script src="../js/main.js"></script>
+    <script src="../js/config.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/websockets-manager.js"></script>
     <script src="../js/cart.js"></script>
-    <script src="../js/utils.js"></script>
     <script src="../js/wishlist.js"></script>
+    <script src="../js/main.js"></script>
 
 </body>
 </html>
