--- a/frontend/html/cart.html
+++ b/frontend/html/cart.html
@@ -146,6 +146,7 @@
     </footer>
     <script src="../js/cart.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/websockets-manager.js"></script>
     <script src="../js/wishlist.js"></script>
     
