--- a/frontend/html/singleproduct.html
+++ b/frontend/html/singleproduct.html
@@ -159,6 +159,7 @@
         </div>
     </footer>
     <script src="../js/wishlist.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/singleproduct.js"></script>
     <script src="../js/websockets-manager.js"></script>
     <script src="../js/main.js"></script>
